fixed variadic gui windows to work wirh and without arguments

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,8 +20,8 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-Pos=208,895
-Size=1549,185
+Pos=190,535
+Size=582,185
 Collapsed=0
 DockId=0x00000007,0
 
@@ -71,8 +71,8 @@ Collapsed=0
 DockId=0x00000010,0
 
 [Window][Camera]
-Pos=1624,19
-Size=296,1061
+Pos=774,19
+Size=306,701
 Collapsed=0
 DockId=0x00000008,0
 
@@ -107,26 +107,26 @@ Size=398,233
 Collapsed=0
 
 [Window][OS]
-Pos=208,895
-Size=1549,185
+Pos=190,535
+Size=582,185
 Collapsed=0
 DockId=0x00000007,3
 
 [Window][Cpu]
-Pos=208,895
-Size=1549,185
+Pos=190,535
+Size=582,185
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Bios]
-Pos=208,895
-Size=1549,185
+Pos=190,535
+Size=582,185
 Collapsed=0
 DockId=0x00000007,4
 
 [Window][Memory]
-Pos=208,895
-Size=1549,185
+Pos=190,535
+Size=582,185
 Collapsed=0
 DockId=0x00000007,2
 
@@ -144,7 +144,7 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1357,720
+Size=1080,720
 Collapsed=0
 
 [Window][Framebuffer]
@@ -154,8 +154,8 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Framebuffer 1]
-Pos=307,19
-Size=1050,701
+Pos=190,19
+Size=582,514
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -185,33 +185,33 @@ Collapsed=0
 
 [Window][Batching stats 0]
 Pos=0,19
-Size=305,701
+Size=188,701
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][test]
-ViewportPos=124,341
-ViewportId=0xD87F7E0C
-Size=211,185
+Pos=0,19
+Size=188,701
 Collapsed=0
+DockId=0x00000010,1
 
 [Docking][Data]
 DockNode              ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
   DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
   DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
-DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=420,199 Size=1357,701 Split=X Selected=0x92A5F8F1
-  DockNode            ID=0x00000010 Parent=0x09EF459F SizeRef=305,701 Selected=0xD434317B
-  DockNode            ID=0x00000011 Parent=0x09EF459F SizeRef=1613,701 Split=X
+DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=420,199 Size=1080,701 Split=X Selected=0x92A5F8F1
+  DockNode            ID=0x00000010 Parent=0x09EF459F SizeRef=188,701 Selected=0xBDD0C265
+  DockNode            ID=0x00000011 Parent=0x09EF459F SizeRef=1031,701 Split=X
     DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=206,871 Selected=0xE87781F4
     DockNode          ID=0x0000000D Parent=0x00000011 SizeRef=1384,871 Split=X
-      DockNode        ID=0x00000005 Parent=0x0000000D SizeRef=1315,701 Split=X
+      DockNode        ID=0x00000005 Parent=0x0000000D SizeRef=976,701 Split=X
         DockNode      ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=Y
           DockNode    ID=0x0000000A Parent=0x0000000B SizeRef=1093,514 Split=X
             DockNode  ID=0x0000000E Parent=0x0000000A SizeRef=839,966 CentralNode=1 Selected=0xD06A1EA9
             DockNode  ID=0x0000000F Parent=0x0000000A SizeRef=708,966 Selected=0x97CA6479
-          DockNode    ID=0x00000007 Parent=0x0000000B SizeRef=1093,185 Selected=0xFFE6EC1B
+          DockNode    ID=0x00000007 Parent=0x0000000B SizeRef=1093,185 Selected=0xB2805FDB
         DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=162,947
-      DockNode        ID=0x00000006 Parent=0x0000000D SizeRef=296,701 Split=Y Selected=0x0545BD69
+      DockNode        ID=0x00000006 Parent=0x0000000D SizeRef=306,701 Split=Y Selected=0x0545BD69
         DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=162,351 Selected=0x0545BD69
         DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=162,348 Selected=0x0EBCCEC8
 
