--- a/Architect.vcxproj.filters
+++ b/Architect.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClCompile Include="src\gfx\gui\gui.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\chronos\delta.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\fileio.h">
@@ -372,6 +375,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\gfx\gui\gui.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\chronos\delta.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
