--- a/imgui.ini
+++ b/imgui.ini
@@ -20,10 +20,10 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-Pos=190,535
-Size=582,185
+Pos=0,859
+Size=1920,221
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000013,0
 
 [Window][Marked Pokemon]
 ViewportPos=28,192
@@ -65,16 +65,16 @@ Size=384,231
 Collapsed=0
 
 [Window][Entity]
-Pos=0,19
-Size=305,1061
+Pos=0,458
+Size=399,399
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x00000015,0
 
 [Window][Camera]
-Pos=774,19
-Size=306,701
+Pos=1604,19
+Size=316,838
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000011,0
 
 [Window][Renderer]
 ViewportPos=79,653
@@ -92,7 +92,7 @@ DockId=0x00000004,0
 Pos=1759,553
 Size=161,527
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000006,0
 
 [Window][System info]
 ViewportPos=129,44
@@ -107,28 +107,28 @@ Size=398,233
 Collapsed=0
 
 [Window][OS]
-Pos=190,535
-Size=582,185
+Pos=0,859
+Size=1920,221
 Collapsed=0
-DockId=0x00000007,3
+DockId=0x00000013,3
 
 [Window][Cpu]
-Pos=190,535
-Size=582,185
+Pos=0,859
+Size=1920,221
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000013,4
 
 [Window][Bios]
-Pos=190,535
-Size=582,185
+Pos=0,859
+Size=1920,221
 Collapsed=0
-DockId=0x00000007,4
+DockId=0x00000013,2
 
 [Window][Memory]
-Pos=190,535
-Size=582,185
+Pos=0,859
+Size=1920,221
 Collapsed=0
-DockId=0x00000007,2
+DockId=0x00000013,1
 
 [Window][Dear ImGui Demo]
 Pos=0,19
@@ -144,7 +144,7 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1080,720
+Size=1920,1080
 Collapsed=0
 
 [Window][Framebuffer]
@@ -154,8 +154,8 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Framebuffer 1]
-Pos=190,19
-Size=582,514
+Pos=401,19
+Size=1201,838
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -187,31 +187,49 @@ Collapsed=0
 Pos=0,19
 Size=188,701
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x00000009,0
 
 [Window][test]
-Pos=0,19
-Size=188,701
+Pos=0,427
+Size=349,423
 Collapsed=0
-DockId=0x00000010,1
+DockId=0x0000000A,0
+
+[Window][Renderer transforms]
+Pos=0,266
+Size=399,190
+Collapsed=0
+DockId=0x00000017,0
+
+[Window][Frames]
+Pos=0,19
+Size=399,245
+Collapsed=0
+DockId=0x00000016,0
 
 [Docking][Data]
-DockNode              ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
-  DockNode            ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
-  DockNode            ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
-DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=420,199 Size=1080,701 Split=X Selected=0x92A5F8F1
-  DockNode            ID=0x00000010 Parent=0x09EF459F SizeRef=188,701 Selected=0xBDD0C265
-  DockNode            ID=0x00000011 Parent=0x09EF459F SizeRef=1031,701 Split=X
-    DockNode          ID=0x0000000C Parent=0x00000011 SizeRef=206,871 Selected=0xE87781F4
-    DockNode          ID=0x0000000D Parent=0x00000011 SizeRef=1384,871 Split=X
-      DockNode        ID=0x00000005 Parent=0x0000000D SizeRef=976,701 Split=X
-        DockNode      ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=Y
-          DockNode    ID=0x0000000A Parent=0x0000000B SizeRef=1093,514 Split=X
-            DockNode  ID=0x0000000E Parent=0x0000000A SizeRef=839,966 CentralNode=1 Selected=0xD06A1EA9
-            DockNode  ID=0x0000000F Parent=0x0000000A SizeRef=708,966 Selected=0x97CA6479
-          DockNode    ID=0x00000007 Parent=0x0000000B SizeRef=1093,185 Selected=0xB2805FDB
-        DockNode      ID=0x00000004 Parent=0x00000005 SizeRef=162,947
-      DockNode        ID=0x00000006 Parent=0x0000000D SizeRef=306,701 Split=Y Selected=0x0545BD69
-        DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=162,351 Selected=0x0545BD69
-        DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=162,348 Selected=0x0EBCCEC8
+DockNode                ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
+  DockNode              ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
+  DockNode              ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
+DockSpace               ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=Y Selected=0x92A5F8F1
+  DockNode              ID=0x00000012 Parent=0x09EF459F SizeRef=1920,478 Split=X
+    DockNode            ID=0x00000010 Parent=0x00000012 SizeRef=1602,1061 Split=X
+      DockNode          ID=0x00000008 Parent=0x00000010 SizeRef=399,1061 Split=Y Selected=0xF7B42954
+        DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=344,437 Split=Y Selected=0xF7B42954
+          DockNode      ID=0x00000014 Parent=0x00000007 SizeRef=349,249 Split=Y Selected=0x1692A570
+            DockNode    ID=0x00000016 Parent=0x00000014 SizeRef=370,139 Selected=0x1692A570
+            DockNode    ID=0x00000017 Parent=0x00000014 SizeRef=370,108 Selected=0xF7B42954
+          DockNode      ID=0x00000015 Parent=0x00000007 SizeRef=349,227 Selected=0xF57F7DD5
+        DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=344,456 Selected=0xBDD0C265
+      DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=361,1061 Split=X
+        DockNode        ID=0x0000000C Parent=0x00000009 SizeRef=206,871 Selected=0xE87781F4
+        DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=1384,871 Split=X
+          DockNode      ID=0x00000005 Parent=0x0000000D SizeRef=710,701 Split=X
+            DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=X
+              DockNode  ID=0x0000000E Parent=0x0000000B SizeRef=839,966 CentralNode=1 Selected=0xD06A1EA9
+              DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=708,966 Selected=0x97CA6479
+            DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=162,947
+          DockNode      ID=0x00000006 Parent=0x0000000D SizeRef=178,701 Selected=0x0545BD69
+    DockNode            ID=0x00000011 Parent=0x00000012 SizeRef=316,1061 Selected=0x0545BD69
+  DockNode              ID=0x00000013 Parent=0x09EF459F SizeRef=1920,221 Selected=0xB2805FDB
 
