--- a/imgui.ini
+++ b/imgui.ini
@@ -20,8 +20,8 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-Pos=0,859
-Size=1920,221
+Pos=0,828
+Size=1398,201
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65,14 +65,14 @@ Size=384,231
 Collapsed=0
 
 [Window][Entity]
-Pos=0,458
-Size=399,399
+Pos=0,479
+Size=399,347
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Camera]
-Pos=1604,19
-Size=316,838
+Pos=1082,19
+Size=316,807
 Collapsed=0
 DockId=0x00000011,0
 
@@ -107,28 +107,28 @@ Size=398,233
 Collapsed=0
 
 [Window][OS]
-Pos=0,859
-Size=1920,221
-Collapsed=0
-DockId=0x00000013,3
-
-[Window][Cpu]
-Pos=0,859
-Size=1920,221
-Collapsed=0
-DockId=0x00000013,4
-
-[Window][Bios]
-Pos=0,859
-Size=1920,221
+Pos=0,828
+Size=1398,201
 Collapsed=0
 DockId=0x00000013,2
 
-[Window][Memory]
-Pos=0,859
-Size=1920,221
+[Window][Cpu]
+Pos=0,828
+Size=1398,201
 Collapsed=0
 DockId=0x00000013,1
+
+[Window][Bios]
+Pos=0,828
+Size=1398,201
+Collapsed=0
+DockId=0x00000013,3
+
+[Window][Memory]
+Pos=0,828
+Size=1398,201
+Collapsed=0
+DockId=0x00000013,4
 
 [Window][Dear ImGui Demo]
 Pos=0,19
@@ -144,7 +144,7 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1080
+Size=1398,1029
 Collapsed=0
 
 [Window][Framebuffer]
@@ -155,7 +155,7 @@ DockId=0x0000000E,0
 
 [Window][Framebuffer 1]
 Pos=401,19
-Size=1201,838
+Size=679,807
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -196,30 +196,36 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Renderer transforms]
-Pos=0,266
-Size=399,190
+Pos=0,251
+Size=399,226
 Collapsed=0
 DockId=0x00000017,0
 
 [Window][Frames]
 Pos=0,19
-Size=399,245
+Size=399,230
 Collapsed=0
 DockId=0x00000016,0
+
+[Window][Style]
+ViewportPos=36,63
+ViewportId=0xF27C976E
+Size=657,1319
+Collapsed=0
 
 [Docking][Data]
 DockNode                ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
   DockNode              ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
   DockNode              ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
-DockSpace               ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=Y Selected=0x92A5F8F1
-  DockNode              ID=0x00000012 Parent=0x09EF459F SizeRef=1920,478 Split=X
+DockSpace               ID=0x09EF459F Window=0x9A404470 Pos=820,168 Size=1398,1010 Split=Y Selected=0x92A5F8F1
+  DockNode              ID=0x00000012 Parent=0x09EF459F SizeRef=1920,861 Split=X
     DockNode            ID=0x00000010 Parent=0x00000012 SizeRef=1602,1061 Split=X
       DockNode          ID=0x00000008 Parent=0x00000010 SizeRef=399,1061 Split=Y Selected=0xF7B42954
         DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=344,437 Split=Y Selected=0xF7B42954
-          DockNode      ID=0x00000014 Parent=0x00000007 SizeRef=349,249 Split=Y Selected=0x1692A570
-            DockNode    ID=0x00000016 Parent=0x00000014 SizeRef=370,139 Selected=0x1692A570
-            DockNode    ID=0x00000017 Parent=0x00000014 SizeRef=370,108 Selected=0xF7B42954
-          DockNode      ID=0x00000015 Parent=0x00000007 SizeRef=349,227 Selected=0xF57F7DD5
+          DockNode      ID=0x00000014 Parent=0x00000007 SizeRef=349,489 Split=Y Selected=0x1692A570
+            DockNode    ID=0x00000016 Parent=0x00000014 SizeRef=399,141 Selected=0x1692A570
+            DockNode    ID=0x00000017 Parent=0x00000014 SizeRef=399,139 Selected=0xF7B42954
+          DockNode      ID=0x00000015 Parent=0x00000007 SizeRef=349,370 Selected=0xF57F7DD5
         DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=344,456 Selected=0xBDD0C265
       DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=361,1061 Split=X
         DockNode        ID=0x0000000C Parent=0x00000009 SizeRef=206,871 Selected=0xE87781F4
@@ -231,5 +237,5 @@ DockSpace               ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 
             DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=162,947
           DockNode      ID=0x00000006 Parent=0x0000000D SizeRef=178,701 Selected=0x0545BD69
     DockNode            ID=0x00000011 Parent=0x00000012 SizeRef=316,1061 Selected=0x0545BD69
-  DockNode              ID=0x00000013 Parent=0x09EF459F SizeRef=1920,221 Selected=0xB2805FDB
+  DockNode              ID=0x00000013 Parent=0x09EF459F SizeRef=1920,201 Selected=0xB2805FDB
 
