--- a/imgui.ini
+++ b/imgui.ini
@@ -20,8 +20,8 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-Pos=0,828
-Size=1398,201
+Pos=0,566
+Size=1080,166
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65,14 +65,14 @@ Size=384,231
 Collapsed=0
 
 [Window][Entity]
-Pos=0,479
-Size=399,347
+Pos=0,309
+Size=367,255
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Camera]
-Pos=1082,19
-Size=316,807
+Pos=764,19
+Size=316,545
 Collapsed=0
 DockId=0x00000011,0
 
@@ -107,26 +107,26 @@ Size=398,233
 Collapsed=0
 
 [Window][OS]
-Pos=0,828
-Size=1398,201
+Pos=0,566
+Size=1080,166
 Collapsed=0
 DockId=0x00000013,2
 
 [Window][Cpu]
-Pos=0,828
-Size=1398,201
+Pos=0,566
+Size=1080,166
 Collapsed=0
 DockId=0x00000013,1
 
 [Window][Bios]
-Pos=0,828
-Size=1398,201
+Pos=0,566
+Size=1080,166
 Collapsed=0
 DockId=0x00000013,3
 
 [Window][Memory]
-Pos=0,828
-Size=1398,201
+Pos=0,566
+Size=1080,166
 Collapsed=0
 DockId=0x00000013,4
 
@@ -144,20 +144,20 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1398,1029
+Size=1080,732
 Collapsed=0
 
 [Window][Framebuffer]
 Pos=198,19
 Size=1094,760
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000010,0
 
 [Window][Framebuffer 1]
-Pos=401,19
-Size=679,807
+Pos=369,19
+Size=393,545
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000010,0
 
 [Window][Framebuffer 2]
 Pos=1049,19
@@ -196,46 +196,322 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Renderer transforms]
-Pos=0,251
-Size=399,226
+Pos=0,165
+Size=367,142
 Collapsed=0
 DockId=0x00000017,0
 
 [Window][Frames]
 Pos=0,19
-Size=399,230
+Size=367,144
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][Style]
-ViewportPos=36,63
-ViewportId=0xF27C976E
-Size=657,1319
+ViewportPos=35,124
+ViewportId=0xC41EEF1B
+Size=1090,827
+Collapsed=0
+DockId=0x00000037,0
+
+[Window][ImGuiCol_Text]
+ViewportPos=912,160
+ViewportId=0x39267CB4
+Size=352,317
 Collapsed=0
 
+[Window][ImGuiCol_TextDisabled]
+Pos=60,60
+Size=209,159
+Collapsed=0
+
+[Window][ImGuiCol_TitleBgCollapsed]
+ViewportPos=908,225
+ViewportId=0xA245FE31
+Size=393,352
+Collapsed=0
+
+[Window][ImGuiCol_ScrollbarGrabHovered]
+ViewportPos=1155,45
+ViewportId=0x6550718A
+Size=419,327
+Collapsed=0
+
+[Window][ImGuiCol_ScrollbarGrabActive]
+ViewportPos=1392,124
+ViewportId=0xCA427438
+Size=392,361
+Collapsed=0
+
+[Window][ImGuiCol_SeparatorHovered]
+ViewportPos=1149,20
+ViewportId=0x65762BEF
+Size=329,296
+Collapsed=0
+
+[Window][ImGuiCol_SeparatorActive]
+ViewportPos=1493,20
+ViewportId=0xEC181138
+Size=357,266
+Collapsed=0
+
+[Window][ImGuiCol_TabActive]
+ViewportPos=29,101
+ViewportId=0xC41EEF1B
+Pos=636,0
+Size=454,827
+Collapsed=0
+DockId=0x00000038,0
+
+[Window][ImGuiCol_ScrollbarGrab]
+ViewportPos=773,271
+ViewportId=0xC7A5A9F0
+Size=216,159
+Collapsed=0
+
+[Window][ImGuiCol_SliderGrab]
+ViewportPos=42,58
+ViewportId=0xC41EEF1B
+Pos=827,566
+Size=223,341
+Collapsed=0
+DockId=0x0000001C,0
+
+[Window][ImGuiCol_BorderShadow]
+ViewportPos=898,86
+ViewportId=0xFB1E0AF2
+Size=209,159
+Collapsed=0
+
+[Window][ImGuiCol_Border]
+ViewportPos=773,271
+ViewportId=0xD2E648B3
+Size=167,159
+Collapsed=0
+
+[Window][ImGuiCol_FrameBgHovered]
+ViewportPos=42,58
+ViewportId=0xC41EEF1B
+Pos=827,0
+Size=223,907
+Collapsed=0
+DockId=0x0000001F,0
+
+[Window][ImGuiCol_SliderGrabActive]
+ViewportPos=42,58
+ViewportId=0xC41EEF1B
+Pos=827,691
+Size=223,216
+Collapsed=0
+DockId=0x0000001E,0
+
+[Window][ImGuiCol_FrameBgActive]
+ViewportPos=46,132
+ViewportId=0xC41EEF1B
+Pos=586,0
+Size=194,907
+Collapsed=0
+DockId=0x00000020,0
+
+[Window][ImGuiCol_Button]
+ViewportPos=46,132
+ViewportId=0xC41EEF1B
+Pos=782,0
+Size=268,327
+Collapsed=0
+DockId=0x00000025,0
+
+[Window][ImGuiCol_ButtonHovered]
+ViewportPos=26,110
+ViewportId=0xC41EEF1B
+Pos=812,0
+Size=278,267
+Collapsed=0
+DockId=0x00000039,0
+
+[Window][ImGuiCol_ButtonActive]
+ViewportPos=46,132
+ViewportId=0xC41EEF1B
+Pos=782,0
+Size=268,629
+Collapsed=0
+DockId=0x00000026,0
+
+[Window][ImGuiCol_ResizeGrip]
+ViewportPos=35,65
+ViewportId=0xC41EEF1B
+Pos=866,0
+Size=192,827
+Collapsed=0
+DockId=0x00000029,0
+
+[Window][ImGuiCol_ResizeGripHovered]
+ViewportPos=35,65
+ViewportId=0xC41EEF1B
+Pos=866,333
+Size=192,494
+Collapsed=0
+DockId=0x0000002B,0
+
+[Window][ImGuiCol_ResizeGripActive]
+ViewportPos=35,65
+ViewportId=0xC41EEF1B
+Pos=866,594
+Size=192,233
+Collapsed=0
+DockId=0x0000002C,0
+
+[Window][ImGuiCol_CheckMark]
+ViewportPos=36,74
+ViewportId=0xC41EEF1B
+Pos=870,0
+Size=188,827
+Collapsed=0
+DockId=0x0000002E,0
+
+[Window][ImGuiCol_DockingPreview]
+ViewportPos=27,82
+ViewportId=0xC41EEF1B
+Pos=776,0
+Size=282,294
+Collapsed=0
+DockId=0x00000031,0
+
+[Window][ImGuiCol_DockingEmptyBg]
+ViewportPos=27,82
+ViewportId=0xC41EEF1B
+Pos=776,0
+Size=282,407
+Collapsed=0
+DockId=0x00000033,0
+
+[Window][ImGuiCol_TabUnfocusedActive]
+ViewportPos=29,101
+ViewportId=0xC41EEF1B
+Pos=799,0
+Size=291,827
+Collapsed=0
+DockId=0x00000035,2
+
+[Window][ImGuiCol_FrameBg]
+ViewportPos=27,82
+ViewportId=0xC41EEF1B
+Pos=776,445
+Size=282,382
+Collapsed=0
+DockId=0x00000036,0
+
+[Window][ImGuiCol_TitleBg]
+ViewportPos=29,101
+ViewportId=0xC41EEF1B
+Pos=799,0
+Size=291,827
+Collapsed=0
+DockId=0x00000035,0
+
+[Window][ImGuiCol_TitleBgActive]
+ViewportPos=29,101
+ViewportId=0xC41EEF1B
+Pos=799,0
+Size=291,827
+Collapsed=0
+DockId=0x00000035,1
+
+[Window][ImGuiCol_Tab]
+ViewportPos=29,101
+ViewportId=0xC41EEF1B
+Pos=636,0
+Size=454,827
+Collapsed=0
+DockId=0x00000038,1
+
+[Window][ImGuiCol_PopupBg]
+Pos=394,154
+Size=347,341
+Collapsed=0
+
+[Window][ImGuiCol_Header]
+ViewportPos=1243,32
+ViewportId=0x7B618B05
+Size=233,205
+Collapsed=0
+
+[Window][ImGuiCol_HeaderHovered]
+ViewportPos=26,110
+ViewportId=0xC41EEF1B
+Pos=812,0
+Size=278,435
+Collapsed=0
+DockId=0x0000003B,0
+
+[Window][ImGuiCol_HeaderActive]
+ViewportPos=26,110
+ViewportId=0xC41EEF1B
+Pos=812,0
+Size=278,827
+Collapsed=0
+DockId=0x0000003C,0
+
 [Docking][Data]
-DockNode                ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
-  DockNode              ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
-  DockNode              ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
-DockSpace               ID=0x09EF459F Window=0x9A404470 Pos=820,168 Size=1398,1010 Split=Y Selected=0x92A5F8F1
-  DockNode              ID=0x00000012 Parent=0x09EF459F SizeRef=1920,861 Split=X
-    DockNode            ID=0x00000010 Parent=0x00000012 SizeRef=1602,1061 Split=X
-      DockNode          ID=0x00000008 Parent=0x00000010 SizeRef=399,1061 Split=Y Selected=0xF7B42954
-        DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=344,437 Split=Y Selected=0xF7B42954
-          DockNode      ID=0x00000014 Parent=0x00000007 SizeRef=349,489 Split=Y Selected=0x1692A570
-            DockNode    ID=0x00000016 Parent=0x00000014 SizeRef=399,141 Selected=0x1692A570
-            DockNode    ID=0x00000017 Parent=0x00000014 SizeRef=399,139 Selected=0xF7B42954
-          DockNode      ID=0x00000015 Parent=0x00000007 SizeRef=349,370 Selected=0xF57F7DD5
-        DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=344,456 Selected=0xBDD0C265
-      DockNode          ID=0x00000009 Parent=0x00000010 SizeRef=361,1061 Split=X
-        DockNode        ID=0x0000000C Parent=0x00000009 SizeRef=206,871 Selected=0xE87781F4
-        DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=1384,871 Split=X
-          DockNode      ID=0x00000005 Parent=0x0000000D SizeRef=710,701 Split=X
-            DockNode    ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=X
-              DockNode  ID=0x0000000E Parent=0x0000000B SizeRef=839,966 CentralNode=1 Selected=0xD06A1EA9
-              DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=708,966 Selected=0x97CA6479
-            DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=162,947
-          DockNode      ID=0x00000006 Parent=0x0000000D SizeRef=178,701 Selected=0x0545BD69
-    DockNode            ID=0x00000011 Parent=0x00000012 SizeRef=316,1061 Selected=0x0545BD69
-  DockNode              ID=0x00000013 Parent=0x09EF459F SizeRef=1920,201 Selected=0xB2805FDB
+DockNode                  ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
+  DockNode                ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
+  DockNode                ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
+DockNode                  ID=0x00000018 Pos=35,124 Size=1090,827 Split=X
+  DockNode                ID=0x0000002D Parent=0x00000018 SizeRef=868,827 Split=X
+    DockNode              ID=0x00000027 Parent=0x0000002D SizeRef=875,806 Split=X
+      DockNode            ID=0x00000021 Parent=0x00000027 SizeRef=780,907 Split=X
+        DockNode          ID=0x00000019 Parent=0x00000021 SizeRef=584,907 Split=X Selected=0x7A5A8CD7
+          DockNode        ID=0x0000002F Parent=0x00000019 SizeRef=774,827 Split=X Selected=0x7A5A8CD7
+            DockNode      ID=0x00000037 Parent=0x0000002F SizeRef=634,827 Selected=0x7A5A8CD7
+            DockNode      ID=0x00000038 Parent=0x0000002F SizeRef=454,827 Selected=0x918F1E5A
+          DockNode        ID=0x00000030 Parent=0x00000019 SizeRef=282,827 Split=Y Selected=0x0DB4DDFD
+            DockNode      ID=0x00000031 Parent=0x00000030 SizeRef=282,294 Selected=0x0DB4DDFD
+            DockNode      ID=0x00000032 Parent=0x00000030 SizeRef=282,531 Split=Y Selected=0xBD555190
+              DockNode    ID=0x00000033 Parent=0x00000032 SizeRef=282,261 Selected=0xBD555190
+              DockNode    ID=0x00000034 Parent=0x00000032 SizeRef=282,268 Split=Y Selected=0x1BFEA435
+                DockNode  ID=0x00000035 Parent=0x00000034 SizeRef=282,443 Selected=0xBDCC96C0
+                DockNode  ID=0x00000036 Parent=0x00000034 SizeRef=282,382 Selected=0xBEE59675
+        DockNode          ID=0x0000001A Parent=0x00000021 SizeRef=194,907 Split=Y Selected=0x48615C6F
+          DockNode        ID=0x0000001B Parent=0x0000001A SizeRef=223,564 Split=Y Selected=0x48615C6F
+            DockNode      ID=0x0000001D Parent=0x0000001B SizeRef=223,428 Split=Y Selected=0x48615C6F
+              DockNode    ID=0x0000001F Parent=0x0000001D SizeRef=223,226 Selected=0x48615C6F
+              DockNode    ID=0x00000020 Parent=0x0000001D SizeRef=223,200 Selected=0x21F40AFD
+            DockNode      ID=0x0000001E Parent=0x0000001B SizeRef=223,134 Selected=0x24F36924
+          DockNode        ID=0x0000001C Parent=0x0000001A SizeRef=223,341 Selected=0x921D33D3
+      DockNode            ID=0x00000022 Parent=0x00000027 SizeRef=268,907 Split=Y Selected=0x04A5D985
+        DockNode          ID=0x00000023 Parent=0x00000022 SizeRef=304,629 Split=Y Selected=0x04A5D985
+          DockNode        ID=0x00000025 Parent=0x00000023 SizeRef=304,327 Selected=0x04A5D985
+          DockNode        ID=0x00000026 Parent=0x00000023 SizeRef=304,300 Selected=0xBD18FF87
+        DockNode          ID=0x00000024 Parent=0x00000022 SizeRef=304,276 Split=Y Selected=0xF82D28B8
+          DockNode        ID=0x00000039 Parent=0x00000024 SizeRef=278,267 Selected=0xF82D28B8
+          DockNode        ID=0x0000003A Parent=0x00000024 SizeRef=278,558 Split=Y Selected=0x0E3C128C
+            DockNode      ID=0x0000003B Parent=0x0000003A SizeRef=278,293 Selected=0x0E3C128C
+            DockNode      ID=0x0000003C Parent=0x0000003A SizeRef=278,263 Selected=0x15049052
+    DockNode              ID=0x00000028 Parent=0x0000002D SizeRef=195,806 Split=Y Selected=0x4D4B2385
+      DockNode            ID=0x00000029 Parent=0x00000028 SizeRef=195,320 Selected=0x4D4B2385
+      DockNode            ID=0x0000002A Parent=0x00000028 SizeRef=195,478 Split=Y Selected=0x3DDC7CCE
+        DockNode          ID=0x0000002B Parent=0x0000002A SizeRef=194,251 Selected=0x3DDC7CCE
+        DockNode          ID=0x0000002C Parent=0x0000002A SizeRef=194,225 Selected=0xF677373F
+  DockNode                ID=0x0000002E Parent=0x00000018 SizeRef=188,827 Selected=0x314854D4
+DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=824,261 Size=1080,713 Split=Y Selected=0x92A5F8F1
+  DockNode                ID=0x00000012 Parent=0x09EF459F SizeRef=1920,533 Split=X
+    DockNode              ID=0x00000008 Parent=0x00000012 SizeRef=367,1061 Split=Y Selected=0xF7B42954
+      DockNode            ID=0x00000007 Parent=0x00000008 SizeRef=344,437 Split=Y Selected=0xF7B42954
+        DockNode          ID=0x00000014 Parent=0x00000007 SizeRef=349,282 Split=Y Selected=0x1692A570
+          DockNode        ID=0x00000016 Parent=0x00000014 SizeRef=399,141 Selected=0x1692A570
+          DockNode        ID=0x00000017 Parent=0x00000014 SizeRef=399,139 Selected=0xF7B42954
+        DockNode          ID=0x00000015 Parent=0x00000007 SizeRef=349,249 Selected=0xF57F7DD5
+      DockNode            ID=0x0000000A Parent=0x00000008 SizeRef=344,456 Selected=0xBDD0C265
+    DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=711,1061 Split=X
+      DockNode            ID=0x0000000C Parent=0x00000009 SizeRef=206,871 Selected=0xE87781F4
+      DockNode            ID=0x0000000D Parent=0x00000009 SizeRef=1384,871 Split=X
+        DockNode          ID=0x00000005 Parent=0x0000000D SizeRef=710,701 Split=X
+          DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=X
+            DockNode      ID=0x0000000E Parent=0x0000000B SizeRef=839,966 Split=X Selected=0xD06A1EA9
+              DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=393,534 CentralNode=1 Selected=0xD06A1EA9
+              DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=316,534 Selected=0x0545BD69
+            DockNode      ID=0x0000000F Parent=0x0000000B SizeRef=708,966 Selected=0x97CA6479
+          DockNode        ID=0x00000004 Parent=0x00000005 SizeRef=162,947
+        DockNode          ID=0x00000006 Parent=0x0000000D SizeRef=178,701 Selected=0x0545BD69
+  DockNode                ID=0x00000013 Parent=0x09EF459F SizeRef=1920,166 Selected=0xB2805FDB
 
