--- a/Architect.vcxproj.filters
+++ b/Architect.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClCompile Include="src\chronos\delta.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\platform\windows\window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\fileio.h">
@@ -378,6 +381,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\chronos\delta.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\platform\windows\window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
