--- a/imgui.ini
+++ b/imgui.ini
@@ -20,8 +20,8 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-Pos=0,554
-Size=1080,166
+Pos=0,1002
+Size=1920,78
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65,16 +65,16 @@ Size=384,231
 Collapsed=0
 
 [Window][Entity]
-Pos=0,303
-Size=367,249
+Pos=0,325
+Size=325,675
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Camera]
-Pos=764,19
-Size=316,533
+Pos=1682,19
+Size=238,308
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000037,0
 
 [Window][Renderer]
 ViewportPos=79,653
@@ -107,26 +107,26 @@ Size=398,233
 Collapsed=0
 
 [Window][OS]
-Pos=0,554
-Size=1080,166
+Pos=0,1002
+Size=1920,78
 Collapsed=0
 DockId=0x00000013,2
 
 [Window][Cpu]
-Pos=0,554
-Size=1080,166
+Pos=0,1002
+Size=1920,78
 Collapsed=0
 DockId=0x00000013,1
 
 [Window][Bios]
-Pos=0,554
-Size=1080,166
+Pos=0,1002
+Size=1920,78
 Collapsed=0
 DockId=0x00000013,3
 
 [Window][Memory]
-Pos=0,554
-Size=1080,166
+Pos=0,1002
+Size=1920,78
 Collapsed=0
 DockId=0x00000013,4
 
@@ -144,7 +144,7 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1080,720
+Size=1920,1080
 Collapsed=0
 
 [Window][Framebuffer]
@@ -154,8 +154,8 @@ Collapsed=0
 DockId=0x00000010,0
 
 [Window][Framebuffer 1]
-Pos=369,19
-Size=393,533
+Pos=327,19
+Size=1353,981
 Collapsed=0
 DockId=0x00000010,0
 
@@ -172,10 +172,10 @@ Collapsed=0
 DockId=0x0000000D,1
 
 [Window][Renderer stats]
-ViewportPos=88,212
-ViewportId=0xB9C29B2D
-Size=316,475
+Pos=1682,329
+Size=238,671
 Collapsed=0
+DockId=0x00000038,0
 
 [Window][Batching stats [%i]0]
 ViewportPos=91,693
@@ -196,23 +196,22 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Renderer transforms]
-Pos=0,162
-Size=367,139
+Pos=0,207
+Size=367,151
 Collapsed=0
-DockId=0x00000017,0
+DockId=0x00000014,0
 
 [Window][Frames]
 Pos=0,19
-Size=367,141
+Size=325,304
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][Style]
-ViewportPos=35,123
-ViewportId=0xC41EEF1B
-Size=1090,827
+ViewportPos=-14,56
+ViewportId=0xF27C976E
+Size=789,836
 Collapsed=0
-DockId=0x00000037,0
 
 [Window][ImGuiCol_Text]
 ViewportPos=912,160
@@ -261,7 +260,7 @@ ViewportId=0xC41EEF1B
 Pos=636,0
 Size=454,827
 Collapsed=0
-DockId=0x00000038,0
+DockId=0x0000002F,0
 
 [Window][ImGuiCol_ScrollbarGrab]
 ViewportPos=773,271
@@ -423,7 +422,7 @@ ViewportId=0xC41EEF1B
 Pos=636,0
 Size=454,827
 Collapsed=0
-DockId=0x00000038,1
+DockId=0x0000002F,1
 
 [Window][ImGuiCol_PopupBg]
 Pos=394,154
@@ -456,14 +455,12 @@ DockId=0x0000003C,0
 DockNode                  ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
   DockNode                ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
   DockNode                ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
-DockNode                  ID=0x00000018 Pos=35,123 Size=1090,827 Split=X
+DockNode                  ID=0x00000018 Pos=65,85 Size=868,827 Split=X
   DockNode                ID=0x0000002D Parent=0x00000018 SizeRef=868,827 Split=X
     DockNode              ID=0x00000027 Parent=0x0000002D SizeRef=875,806 Split=X
       DockNode            ID=0x00000021 Parent=0x00000027 SizeRef=780,907 Split=X
         DockNode          ID=0x00000019 Parent=0x00000021 SizeRef=584,907 Split=X Selected=0x7A5A8CD7
-          DockNode        ID=0x0000002F Parent=0x00000019 SizeRef=774,827 Split=X Selected=0x7A5A8CD7
-            DockNode      ID=0x00000037 Parent=0x0000002F SizeRef=634,827 Selected=0x7A5A8CD7
-            DockNode      ID=0x00000038 Parent=0x0000002F SizeRef=454,827 Selected=0x918F1E5A
+          DockNode        ID=0x0000002F Parent=0x00000019 SizeRef=774,827 Selected=0x7A5A8CD7
           DockNode        ID=0x00000030 Parent=0x00000019 SizeRef=282,827 Split=Y Selected=0x0DB4DDFD
             DockNode      ID=0x00000031 Parent=0x00000030 SizeRef=282,294 Selected=0x0DB4DDFD
             DockNode      ID=0x00000032 Parent=0x00000030 SizeRef=282,531 Split=Y Selected=0xBD555190
@@ -493,25 +490,27 @@ DockNode                  ID=0x00000018 Pos=35,123 Size=1090,827 Split=X
         DockNode          ID=0x0000002B Parent=0x0000002A SizeRef=194,251 Selected=0x3DDC7CCE
         DockNode          ID=0x0000002C Parent=0x0000002A SizeRef=194,225 Selected=0xF677373F
   DockNode                ID=0x0000002E Parent=0x00000018 SizeRef=188,827 Selected=0x314854D4
-DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=420,199 Size=1080,701 Split=Y Selected=0x92A5F8F1
-  DockNode                ID=0x00000012 Parent=0x09EF459F SizeRef=1920,533 Split=X
-    DockNode              ID=0x00000008 Parent=0x00000012 SizeRef=367,1061 Split=Y Selected=0xF7B42954
+DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=Y Selected=0x92A5F8F1
+  DockNode                ID=0x00000012 Parent=0x09EF459F SizeRef=1920,782 Split=X
+    DockNode              ID=0x00000008 Parent=0x00000012 SizeRef=325,1061 Split=Y Selected=0xF7B42954
       DockNode            ID=0x00000007 Parent=0x00000008 SizeRef=344,437 Split=Y Selected=0xF7B42954
-        DockNode          ID=0x00000014 Parent=0x00000007 SizeRef=349,282 Split=Y Selected=0x1692A570
-          DockNode        ID=0x00000016 Parent=0x00000014 SizeRef=399,141 Selected=0x1692A570
-          DockNode        ID=0x00000017 Parent=0x00000014 SizeRef=399,139 Selected=0xF7B42954
-        DockNode          ID=0x00000015 Parent=0x00000007 SizeRef=349,249 Selected=0xF57F7DD5
+        DockNode          ID=0x00000016 Parent=0x00000007 SizeRef=399,242 Selected=0x1692A570
+        DockNode          ID=0x00000017 Parent=0x00000007 SizeRef=399,538 Split=Y Selected=0xF7B42954
+          DockNode        ID=0x00000014 Parent=0x00000017 SizeRef=367,151 Selected=0xF7B42954
+          DockNode        ID=0x00000015 Parent=0x00000017 SizeRef=367,192 Selected=0xF57F7DD5
       DockNode            ID=0x0000000A Parent=0x00000008 SizeRef=344,456 Selected=0xBDD0C265
-    DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=711,1061 Split=X
+    DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=1593,1061 Split=X
       DockNode            ID=0x0000000C Parent=0x00000009 SizeRef=206,871 Selected=0xE87781F4
       DockNode            ID=0x0000000D Parent=0x00000009 SizeRef=1384,871 Split=X
         DockNode          ID=0x00000005 Parent=0x0000000D SizeRef=710,701 Split=X
           DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=X
             DockNode      ID=0x0000000E Parent=0x0000000B SizeRef=839,966 Split=X Selected=0xD06A1EA9
-              DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=393,534 CentralNode=1 Selected=0xD06A1EA9
-              DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=316,534 Selected=0x0545BD69
+              DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=1353,534 CentralNode=1 Selected=0xD06A1EA9
+              DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=238,534 Split=Y Selected=0x0545BD69
+                DockNode  ID=0x00000037 Parent=0x00000011 SizeRef=316,245 Selected=0x0545BD69
+                DockNode  ID=0x00000038 Parent=0x00000011 SizeRef=316,535 Selected=0x61A9994E
             DockNode      ID=0x0000000F Parent=0x0000000B SizeRef=708,966 Selected=0x97CA6479
           DockNode        ID=0x00000004 Parent=0x00000005 SizeRef=162,947
         DockNode          ID=0x00000006 Parent=0x0000000D SizeRef=178,701 Selected=0x0545BD69
-  DockNode                ID=0x00000013 Parent=0x09EF459F SizeRef=1920,166 Selected=0xB2805FDB
+  DockNode                ID=0x00000013 Parent=0x09EF459F SizeRef=1920,78 Selected=0xB2805FDB
 
