added additional camera controls based on wich view port is in focus and experimental rendering of other camera object

--- a/imgui.ini
+++ b/imgui.ini
@@ -20,8 +20,8 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-Pos=0,1002
-Size=1920,78
+Pos=0,641
+Size=1080,79
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65,14 +65,14 @@ Size=384,231
 Collapsed=0
 
 [Window][Entity]
-Pos=0,325
-Size=325,675
+Pos=0,139
+Size=284,500
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Camera]
-Pos=1682,19
-Size=238,308
+Pos=858,19
+Size=222,184
 Collapsed=0
 DockId=0x00000037,0
 
@@ -107,34 +107,34 @@ Size=398,233
 Collapsed=0
 
 [Window][OS]
-Pos=0,1002
-Size=1920,78
+Pos=0,641
+Size=1080,79
 Collapsed=0
 DockId=0x00000013,2
 
 [Window][Cpu]
-Pos=0,1002
-Size=1920,78
+Pos=0,641
+Size=1080,79
 Collapsed=0
 DockId=0x00000013,1
 
 [Window][Bios]
-Pos=0,1002
-Size=1920,78
+Pos=0,641
+Size=1080,79
 Collapsed=0
 DockId=0x00000013,3
 
 [Window][Memory]
-Pos=0,1002
-Size=1920,78
+Pos=0,641
+Size=1080,79
 Collapsed=0
 DockId=0x00000013,4
 
 [Window][Dear ImGui Demo]
-Pos=0,19
-Size=206,1061
+ViewportPos=52,162
+ViewportId=0xE927CF2F
+Size=494,586
 Collapsed=0
-DockId=0x0000000C,0
 
 [Window][DockSpace Demo]
 ViewportPos=585,179
@@ -144,24 +144,24 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1080
+Size=1080,720
 Collapsed=0
 
 [Window][Framebuffer]
 Pos=198,19
 Size=1094,760
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x0000000E,0
 
 [Window][Framebuffer 1]
-Pos=327,19
-Size=1353,981
+Pos=286,19
+Size=269,620
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x0000000E,0
 
 [Window][Framebuffer 2]
-Pos=1049,19
-Size=708,874
+Pos=557,19
+Size=299,620
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -169,11 +169,11 @@ DockId=0x0000000F,0
 Pos=0,19
 Size=201,701
 Collapsed=0
-DockId=0x0000000D,1
+DockId=0x00000009,1
 
 [Window][Renderer stats]
-Pos=1682,329
-Size=238,671
+Pos=858,205
+Size=222,434
 Collapsed=0
 DockId=0x00000038,0
 
@@ -203,21 +203,23 @@ DockId=0x00000014,0
 
 [Window][Frames]
 Pos=0,19
-Size=325,304
+Size=284,118
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][Style]
-ViewportPos=-14,56
+ViewportPos=10,2
 ViewportId=0xF27C976E
-Size=789,836
-Collapsed=0
+Size=949,928
+Collapsed=1
 
 [Window][ImGuiCol_Text]
-ViewportPos=912,160
-ViewportId=0x39267CB4
-Size=442,435
+ViewportPos=-27,35
+ViewportId=0x1AD276EE
+Pos=655,0
+Size=294,957
 Collapsed=0
+DockId=0x0000001F,0
 
 [Window][ImGuiCol_TextDisabled]
 Pos=60,60
@@ -251,7 +253,7 @@ Collapsed=0
 [Window][ImGuiCol_SeparatorActive]
 ViewportPos=1493,20
 ViewportId=0xEC181138
-Size=357,266
+Size=357,319
 Collapsed=0
 
 [Window][ImGuiCol_TabActive]
@@ -294,7 +296,7 @@ ViewportId=0xC41EEF1B
 Pos=827,0
 Size=223,907
 Collapsed=0
-DockId=0x0000001F,0
+DockId=0x0000001D,0
 
 [Window][ImGuiCol_SliderGrabActive]
 ViewportPos=42,58
@@ -305,10 +307,10 @@ Collapsed=0
 DockId=0x0000001E,0
 
 [Window][ImGuiCol_FrameBgActive]
-ViewportPos=46,132
-ViewportId=0xC41EEF1B
-Pos=586,0
-Size=194,907
+ViewportPos=-27,35
+ViewportId=0x1AD276EE
+Pos=655,326
+Size=294,631
 Collapsed=0
 DockId=0x00000020,0
 
@@ -401,10 +403,9 @@ Collapsed=0
 DockId=0x00000036,0
 
 [Window][ImGuiCol_TitleBg]
-ViewportPos=29,101
+ViewportPos=477,114
 ViewportId=0xC41EEF1B
-Pos=799,0
-Size=291,827
+Size=402,452
 Collapsed=0
 DockId=0x00000035,0
 
@@ -451,11 +452,31 @@ Size=278,827
 Collapsed=0
 DockId=0x0000003C,0
 
+[Window][ImGuiCol_WindowBg]
+ViewportPos=32,71
+ViewportId=0xAF9BB08E
+Pos=693,0
+Size=207,836
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=355,85
+Size=339,307
+Collapsed=0
+
+[Window][Filemanager]
+Pos=83,103
+Size=552,397
+Collapsed=0
+
 [Docking][Data]
 DockNode                  ID=0x00000001 Pos=39,331 Size=340,300 Split=Y
   DockNode                ID=0x00000002 Parent=0x00000001 SizeRef=405,152 Selected=0x6962DA6A
   DockNode                ID=0x00000003 Parent=0x00000001 SizeRef=405,146 Selected=0x5402F3DA
-DockNode                  ID=0x00000018 Pos=65,85 Size=868,827 Split=X
+DockNode                  ID=0x0000000C Pos=173,40 Size=949,957 Split=Y
+  DockNode                ID=0x0000001F Parent=0x0000000C SizeRef=294,324 Selected=0xDAE6448D
+  DockNode                ID=0x00000020 Parent=0x0000000C SizeRef=294,631 Selected=0x21F40AFD
+DockNode                  ID=0x00000018 Pos=477,114 Size=402,452 Split=X
   DockNode                ID=0x0000002D Parent=0x00000018 SizeRef=868,827 Split=X
     DockNode              ID=0x00000027 Parent=0x0000002D SizeRef=875,806 Split=X
       DockNode            ID=0x00000021 Parent=0x00000027 SizeRef=780,907 Split=X
@@ -470,9 +491,7 @@ DockNode                  ID=0x00000018 Pos=65,85 Size=868,827 Split=X
                 DockNode  ID=0x00000036 Parent=0x00000034 SizeRef=282,382 Selected=0xBEE59675
         DockNode          ID=0x0000001A Parent=0x00000021 SizeRef=194,907 Split=Y Selected=0x48615C6F
           DockNode        ID=0x0000001B Parent=0x0000001A SizeRef=223,564 Split=Y Selected=0x48615C6F
-            DockNode      ID=0x0000001D Parent=0x0000001B SizeRef=223,428 Split=Y Selected=0x48615C6F
-              DockNode    ID=0x0000001F Parent=0x0000001D SizeRef=223,226 Selected=0x48615C6F
-              DockNode    ID=0x00000020 Parent=0x0000001D SizeRef=223,200 Selected=0x21F40AFD
+            DockNode      ID=0x0000001D Parent=0x0000001B SizeRef=223,428 Selected=0x48615C6F
             DockNode      ID=0x0000001E Parent=0x0000001B SizeRef=223,134 Selected=0x24F36924
           DockNode        ID=0x0000001C Parent=0x0000001A SizeRef=223,341 Selected=0x921D33D3
       DockNode            ID=0x00000022 Parent=0x00000027 SizeRef=268,907 Split=Y Selected=0x04A5D985
@@ -490,27 +509,25 @@ DockNode                  ID=0x00000018 Pos=65,85 Size=868,827 Split=X
         DockNode          ID=0x0000002B Parent=0x0000002A SizeRef=194,251 Selected=0x3DDC7CCE
         DockNode          ID=0x0000002C Parent=0x0000002A SizeRef=194,225 Selected=0xF677373F
   DockNode                ID=0x0000002E Parent=0x00000018 SizeRef=188,827 Selected=0x314854D4
-DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=0,19 Size=1920,1061 Split=Y Selected=0x92A5F8F1
-  DockNode                ID=0x00000012 Parent=0x09EF459F SizeRef=1920,782 Split=X
-    DockNode              ID=0x00000008 Parent=0x00000012 SizeRef=325,1061 Split=Y Selected=0xF7B42954
+DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=420,199 Size=1080,701 Split=Y Selected=0x92A5F8F1
+  DockNode                ID=0x00000012 Parent=0x09EF459F SizeRef=1920,810 Split=X
+    DockNode              ID=0x00000008 Parent=0x00000012 SizeRef=284,1061 Split=Y Selected=0xF7B42954
       DockNode            ID=0x00000007 Parent=0x00000008 SizeRef=344,437 Split=Y Selected=0xF7B42954
-        DockNode          ID=0x00000016 Parent=0x00000007 SizeRef=399,242 Selected=0x1692A570
-        DockNode          ID=0x00000017 Parent=0x00000007 SizeRef=399,538 Split=Y Selected=0xF7B42954
+        DockNode          ID=0x00000016 Parent=0x00000007 SizeRef=399,154 Selected=0x1692A570
+        DockNode          ID=0x00000017 Parent=0x00000007 SizeRef=399,654 Split=Y Selected=0xF7B42954
           DockNode        ID=0x00000014 Parent=0x00000017 SizeRef=367,151 Selected=0xF7B42954
           DockNode        ID=0x00000015 Parent=0x00000017 SizeRef=367,192 Selected=0xF57F7DD5
       DockNode            ID=0x0000000A Parent=0x00000008 SizeRef=344,456 Selected=0xBDD0C265
-    DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=1593,1061 Split=X
-      DockNode            ID=0x0000000C Parent=0x00000009 SizeRef=206,871 Selected=0xE87781F4
-      DockNode            ID=0x0000000D Parent=0x00000009 SizeRef=1384,871 Split=X
-        DockNode          ID=0x00000005 Parent=0x0000000D SizeRef=710,701 Split=X
-          DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=X
-            DockNode      ID=0x0000000E Parent=0x0000000B SizeRef=839,966 Split=X Selected=0xD06A1EA9
-              DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=1353,534 CentralNode=1 Selected=0xD06A1EA9
-              DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=238,534 Split=Y Selected=0x0545BD69
-                DockNode  ID=0x00000037 Parent=0x00000011 SizeRef=316,245 Selected=0x0545BD69
-                DockNode  ID=0x00000038 Parent=0x00000011 SizeRef=316,535 Selected=0x61A9994E
-            DockNode      ID=0x0000000F Parent=0x0000000B SizeRef=708,966 Selected=0x97CA6479
-          DockNode        ID=0x00000004 Parent=0x00000005 SizeRef=162,947
-        DockNode          ID=0x00000006 Parent=0x0000000D SizeRef=178,701 Selected=0x0545BD69
-  DockNode                ID=0x00000013 Parent=0x09EF459F SizeRef=1920,78 Selected=0xB2805FDB
+    DockNode              ID=0x00000009 Parent=0x00000012 SizeRef=794,1061 Split=X
+      DockNode            ID=0x00000005 Parent=0x00000009 SizeRef=710,701 Split=X
+        DockNode          ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=X
+          DockNode        ID=0x00000010 Parent=0x0000000B SizeRef=1150,534 Split=X Selected=0xD06A1EA9
+            DockNode      ID=0x0000000E Parent=0x00000010 SizeRef=269,981 CentralNode=1 Selected=0xD06A1EA9
+            DockNode      ID=0x0000000F Parent=0x00000010 SizeRef=299,981 Selected=0x97CA6479
+          DockNode        ID=0x00000011 Parent=0x0000000B SizeRef=222,534 Split=Y Selected=0x0545BD69
+            DockNode      ID=0x00000037 Parent=0x00000011 SizeRef=316,241 Selected=0x0545BD69
+            DockNode      ID=0x00000038 Parent=0x00000011 SizeRef=316,567 Selected=0x61A9994E
+        DockNode          ID=0x00000004 Parent=0x00000005 SizeRef=162,947
+      DockNode            ID=0x00000006 Parent=0x00000009 SizeRef=178,701 Selected=0x0545BD69
+  DockNode                ID=0x00000013 Parent=0x09EF459F SizeRef=1920,79 Selected=0xB2805FDB
 
