--- a/imgui.ini
+++ b/imgui.ini
@@ -20,8 +20,8 @@ Size=383,156
 Collapsed=0
 
 [Window][Video card info]
-Pos=0,641
-Size=1080,79
+Pos=0,526
+Size=1080,194
 Collapsed=0
 DockId=0x00000013,0
 
@@ -65,14 +65,14 @@ Size=384,231
 Collapsed=0
 
 [Window][Entity]
-Pos=0,139
-Size=284,500
+Pos=0,156
+Size=284,368
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][Camera]
 Pos=858,19
-Size=222,184
+Size=222,505
 Collapsed=0
 DockId=0x00000037,0
 
@@ -107,26 +107,26 @@ Size=398,233
 Collapsed=0
 
 [Window][OS]
-Pos=0,641
-Size=1080,79
+Pos=0,526
+Size=1080,194
 Collapsed=0
 DockId=0x00000013,2
 
 [Window][Cpu]
-Pos=0,641
-Size=1080,79
+Pos=0,526
+Size=1080,194
 Collapsed=0
 DockId=0x00000013,1
 
 [Window][Bios]
-Pos=0,641
-Size=1080,79
+Pos=0,526
+Size=1080,194
 Collapsed=0
 DockId=0x00000013,3
 
 [Window][Memory]
-Pos=0,641
-Size=1080,79
+Pos=0,526
+Size=1080,194
 Collapsed=0
 DockId=0x00000013,4
 
@@ -155,13 +155,13 @@ DockId=0x0000000E,0
 
 [Window][Framebuffer 1]
 Pos=286,19
-Size=269,620
+Size=247,505
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Framebuffer 2]
-Pos=557,19
-Size=299,620
+Pos=535,19
+Size=321,505
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -172,8 +172,8 @@ Collapsed=0
 DockId=0x00000009,1
 
 [Window][Renderer stats]
-Pos=858,205
-Size=222,434
+Pos=1242,216
+Size=222,362
 Collapsed=0
 DockId=0x00000038,0
 
@@ -203,21 +203,20 @@ DockId=0x00000014,0
 
 [Window][Frames]
 Pos=0,19
-Size=284,118
+Size=284,135
 Collapsed=0
 DockId=0x00000016,0
 
 [Window][Style]
-ViewportPos=10,2
+ViewportPos=32,64
 ViewportId=0xF27C976E
 Size=949,928
-Collapsed=1
+Collapsed=0
 
 [Window][ImGuiCol_Text]
-ViewportPos=-27,35
+ViewportPos=173,40
 ViewportId=0x1AD276EE
-Pos=655,0
-Size=294,957
+Size=949,957
 Collapsed=0
 DockId=0x0000001F,0
 
@@ -465,7 +464,8 @@ Size=339,307
 Collapsed=0
 
 [Window][Filemanager]
-Pos=83,103
+ViewportPos=81,238
+ViewportId=0x3D9C6B52
 Size=552,397
 Collapsed=0
 
@@ -510,11 +510,11 @@ DockNode                  ID=0x00000018 Pos=477,114 Size=402,452 Split=X
         DockNode          ID=0x0000002C Parent=0x0000002A SizeRef=194,225 Selected=0xF677373F
   DockNode                ID=0x0000002E Parent=0x00000018 SizeRef=188,827 Selected=0x314854D4
 DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=420,199 Size=1080,701 Split=Y Selected=0x92A5F8F1
-  DockNode                ID=0x00000012 Parent=0x09EF459F SizeRef=1920,810 Split=X
+  DockNode                ID=0x00000012 Parent=0x09EF459F SizeRef=1920,658 Split=X
     DockNode              ID=0x00000008 Parent=0x00000012 SizeRef=284,1061 Split=Y Selected=0xF7B42954
       DockNode            ID=0x00000007 Parent=0x00000008 SizeRef=344,437 Split=Y Selected=0xF7B42954
-        DockNode          ID=0x00000016 Parent=0x00000007 SizeRef=399,154 Selected=0x1692A570
-        DockNode          ID=0x00000017 Parent=0x00000007 SizeRef=399,654 Split=Y Selected=0xF7B42954
+        DockNode          ID=0x00000016 Parent=0x00000007 SizeRef=399,149 Selected=0x1692A570
+        DockNode          ID=0x00000017 Parent=0x00000007 SizeRef=399,408 Split=Y Selected=0xF7B42954
           DockNode        ID=0x00000014 Parent=0x00000017 SizeRef=367,151 Selected=0xF7B42954
           DockNode        ID=0x00000015 Parent=0x00000017 SizeRef=367,192 Selected=0xF57F7DD5
       DockNode            ID=0x0000000A Parent=0x00000008 SizeRef=344,456 Selected=0xBDD0C265
@@ -522,12 +522,12 @@ DockSpace                 ID=0x09EF459F Window=0x9A404470 Pos=420,199 Size=1080,
       DockNode            ID=0x00000005 Parent=0x00000009 SizeRef=710,701 Split=X
         DockNode          ID=0x0000000B Parent=0x00000005 SizeRef=916,947 Split=X
           DockNode        ID=0x00000010 Parent=0x0000000B SizeRef=1150,534 Split=X Selected=0xD06A1EA9
-            DockNode      ID=0x0000000E Parent=0x00000010 SizeRef=269,981 CentralNode=1 Selected=0xD06A1EA9
-            DockNode      ID=0x0000000F Parent=0x00000010 SizeRef=299,981 Selected=0x97CA6479
+            DockNode      ID=0x0000000E Parent=0x00000010 SizeRef=247,981 CentralNode=1 Selected=0xD06A1EA9
+            DockNode      ID=0x0000000F Parent=0x00000010 SizeRef=321,981 Selected=0x97CA6479
           DockNode        ID=0x00000011 Parent=0x0000000B SizeRef=222,534 Split=Y Selected=0x0545BD69
-            DockNode      ID=0x00000037 Parent=0x00000011 SizeRef=316,241 Selected=0x0545BD69
-            DockNode      ID=0x00000038 Parent=0x00000011 SizeRef=316,567 Selected=0x61A9994E
+            DockNode      ID=0x00000037 Parent=0x00000011 SizeRef=316,230 Selected=0x0545BD69
+            DockNode      ID=0x00000038 Parent=0x00000011 SizeRef=316,426 Selected=0x61A9994E
         DockNode          ID=0x00000004 Parent=0x00000005 SizeRef=162,947
       DockNode            ID=0x00000006 Parent=0x00000009 SizeRef=178,701 Selected=0x0545BD69
-  DockNode                ID=0x00000013 Parent=0x09EF459F SizeRef=1920,79 Selected=0xB2805FDB
+  DockNode                ID=0x00000013 Parent=0x09EF459F SizeRef=1920,194 Selected=0xB2805FDB
 
